<resources>
    <string name="app_name">Bakalářka</string>
    <string name="title_activity_login">Přihlášení</string>
    <string name="title_activity_register">Registrace</string>
    <string name="title_activity_main">Podněty</string>
    <string name="welcome_header">Vítejte!</string>
    <string name="welcome_text">Tato aplikace je součástí bakalářské práce Jana Kotase pod vedením Ing. Lukáše
        Semeráda na Fakultě informačních technologií Vysokého učení technického v Brně. Cílem aplikace je demonstrovat
        možnosti využití masově používaných moderních technologií k zkvalitnění správy veřejných prostor v obcích.
        Aplikace je založena na
        principu přímé interakce občanů se správci měst. Díky aplikaci mají občané možnost během několika minut nahlásit
        problémy z
        jejich okolí, kterými by se mělo město zabývat. Na druhou stranu města mají díky hlášením od občanů dobrý
        přehled o tom, jaké problémy občany jejich měst trápí a díky dlouhodobé evidenci v systému mohou analyzovat,
        které části měst jsou nejvíce problematické.
    </string>
    <string name="sign_in_welcome">Přihlásit se</string>
    <string name="sign_up_welcome">Registrovat se</string>
    <string name="email">Email</string>
    <string name="password">Heslo</string>
    <string name="forgotten_password">Zapomněli jste heslo?</string>
    <string name="action_sign_in">Přihlásit se</string>
    <string name="or">nebo</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_google">Log in with Google+</string>
    <string name="not_having_account">Nemáte účet?</string>
    <string name="create_new_account">Zaregistrujte se</string>
    <string name="error_invalid_email_or_password">Nesprávné přihlašovací údaje</string>
    <string name="error_field_required">Tohle pole je povinné</string>
    <string name="telephone">Telefonní číslo</string>
    <string name="password_confirm">Potvrzení hesla</string>
    <string name="action_sign_up">Registrovat se</string>
    <string name="sign_up_facebook">Sign up with Facebook</string>
    <string name="sign_up_google">Sign up with Google+</string>
    <string name="having_account">Již máte účet?</string>
    <string name="having_account_login">Přihlašte se</string>
    <string name="name">Jméno</string>
    <string name="sign_up_checkbox_text">Souhlasím se zpracováním osobních údajů a s obecnými podmínkami aplikace XXX.
    </string>
    <string name="successful_logout">Uživatel úspěšně odhlášen</string>
    <string name="err_login_1">Neplatný email</string>
    <string name="err_login_2">Heslo není vyplněno</string>
    <string name="err_login_3">Neexistující přihlašovací údaje</string>
    <string name="err_login_4">Neznámá chyba</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Domů</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_stats">Statistiky</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_messages">Zprávy</string>
    <string name="menu_others">Ostatní</string>
    <string name="menu_settings">Nastavení</string>
    <string name="menu_help">Nápověda</string>
    <string name="menu_report_bug">Hlášení chyby</string>
    <string name="action_filter">Fitrovat</string>
    <string name="action_sort">Řadit</string>
    <string name="action_report_bug">Nahlásit chybu</string>
    <string name="action_refresh">Aktualizovat</string>
    <string name="action_logout">Odhlásit se</string>
    <string name="currrentTabTitle">AKTUÁLNÍ</string>
    <string name="closedTabTitle">UZAVŘENÉ</string>
    <string name="ownTabTitle">VLASTNÍ</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="category_icon">category_icon</string>
    <string name="more_ico_button">more_ico_button</string>
    <string name="dot_divider">&#160;•&#160;</string>
    <string name="report_image">Report image</string>
    <string name="report">Report</string>
    <string name="report_state0">ČEKÁ NA SCHVÁLENÍ</string>
    <string name="report_state1">SCHVÁLENO</string>
    <string name="report_state2">VYŘEŠENO</string>
    <string name="report_state3">ZAMÍTNUTO</string>
    <string name="reason_for_refusal">Důvod zamítnutí</string>
    <string name="title_activity_report_on_map">Map</string>
    <string name="users_icon">User\'s icon</string>
    <string name="title_activity_report_get_location">Lokace</string>
    <string name="location_marker">Location marker</string>
    <string name="waiting_for_location">Čekání na polohu...</string>
    <string name="unsuccessful_searching_for_location">Vyhledávání polohy selhalo, zkuste to znovu.</string>
    <string name="btn_continue">POKRAČOVAT</string>
    <string name="btn_back">ZPĚT</string>
    <string name="hint_report_title">Nadpis</string>
    <string name="activity_description">Popis</string>
    <string name="warning_closing_report">Pokud opustíte vytváření nového reportu, ztratíte tím veškerý progres.
    </string>
    <string name="activity_choosing_photos">Výběr fotografií</string>
    <string name="albums">Alba</string>
    <string name="done">Hotovo</string>
    <string name="selection_limit_reached">Byl dosažen limit výběru</string>
    <string name="category_greens">Zeleň</string>
    <string name="category_garbage">Odpad</string>
    <string name="category_traffic">Doprava</string>
    <string name="category_street_furniture">Mobiliář</string>
    <string name="category_public_lighting">Veřejné osvětlení</string>
    <string name="activity_additional_data">Doplňující data</string>
    <string name="activity_categories">Kategorie</string>
    <string name="hint_report_description">Popis podnětu</string>
    <string name="activity_new_report">Nový report</string>
    <string name="send">Odeslat</string>
    <string name="user_logged_in">Uživatel přihlášen!</string>
    <string name="loggin_in_running">Probíhá přihlašování..</string>
    <string name="show_report_detail">Zobrazit detail</string>
    <string name="registration_is_running">Probíhá registrace..</string>
    <string name="reports">Podněty</string>
    <string name="help">Nápověda</string>
    <string name="about_app">O aplikaci</string>
    <string name="about_app_text">Tato aplikace je součástí bakalářské práce Jana Kotase pod vedením Ing. Lukáše
        Semeráda na Fakultě informačních technologií Vysokého učení technického v Brně. Cílem aplikace je demonstrovat
        možnosti využití masově používaných moderních technologií k zkvalitnění správy veřejných prostor v obcích.
        Aplikace je založena na
        principu přímé interakce občanů se správci měst. Díky aplikaci mají občané možnost během několika minut nahlásit
        problémy z
        jejich okolí, kterými by se mělo město zabývat. Na druhou stranu města mají díky hlášením od občanů dobrý
        přehled o tom, jaké problémy občany jejich měst trápí a díky dlouhodobé evidenci v systému mohou analyzovat,
        které části měst jsou nejvíce problematické.
    </string>
    <string name="activity_help">Nápověda</string>
    <string name="bug_description">Zde popište chybu</string>
    <string name="send_bug">Odeslat hlášení</string>
    <string name="activity_report_bug">Hlášení chyby</string>
    <string name="help_report_list">V sekci podněty se zobrazují všechny dosud přidané podněty od uživatelů aplikace. V
        horní části můžete filtrovat podněty na aktulní, uzavřené a vlastní. Po kliknutí na kartu podnětu se vám otevře
        jeho detail. Každá karta obsahuje ikonu kategorie, titulek, místo, datum a titulní fotografii. V pravé spodní
        části obrazovky si můžete povšimnout modrého tlačítka se symbolem plus. Tohle tlačítko zahájí proces přidání
        nového podnětu. Pokud se vám podněty nezobrazují, pravděpodobně nejste připojeni k internetu nebo ještě žádné
        podněty nebyly přidány.
    </string>
    <string name="help_report_list_header">Seznam podnětů</string>
    <string name="help_new_report_header">Proces přidávání nového podnětu</string>
    <string name="help_choosing_photos_header">Výběr fotografií</string>
    <string name="help_choosing_photos">Po zahájení procesu přidávání nového podnětu se vám zobrazí obrazovka s výběrem
        fotografií. Abyste mohli fotografie vybrat, musíte povolit aplikaci přístup k úložišti. Můžete vybrat již
        existující fotografie nebo můžete pořídit nové. V případě, že budete chtít výběr upravit, můžete se kdykoliv do
        výběru vrátit pomocí modrého tlačítka se symbolem plus. Odebrat fotografie z výběru lze kliknutím na křížek v
        pravém horním rohu každé fotografie. Pro pokračování v procesu přidávání nového podnětu musí být vybrána alespoň
        jedna fotografie. Maximálním počtem je 9 fotografií. Poté, co dokončíte výběr fotografií, klikněte na tlačítko
        pokračovat.
    </string>
    <string name="help_setting_location_header">Určení lokace</string>
    <string name="help_setting_location">K přesnému určení lokace problému můžete využít GPS vašeho telefonu (kliknutím
        na modré tlačítko) nebo polohu určit ručně pomocí posunutí ukazatele na místo v mapě. Určení přesné polohy je
        esenciální pro řešitele problému.
    </string>
    <string name="help_choosing_category_header">Výběr kategorie</string>
    <string name="help_choosing_category">Každé hlášení spadá do určité kategorie, která posléze pomáhá problém směrovat
        ke kompetentním řešitelům. Zvolení kategorie provedete jednoduše jejím označením pomocí klikutí a výběr
        potvrdíte stiskem tlačítka pokračovat.
    </string>
    <string name="help_report_description_header">Popis problému</string>
    <string name="help_report_description">Tato sekce slouží k dalšímu specifikování problému. Snažte se, aby titulek i
        popis jasně a stručně popisoval problém. Formu, kterou při vysvětlení problému použijete značně ovlivní, zda se
        správci města budou problémem zabývat či nikoliv. Správci měst mají právo nahlásit uživatele, kteří při v popisu
        používají sprostá slova nebo v popisu jakkoliv uraží správce měst. Takový uživatel může být posléze zablokován.
    </string>
    <string name="help_report_description_modules">Součástí této sekce mohou být také tzv. moduly. Cílem modůlů je ještě
        více zkonkretizovat problém obvykle v závislosti na kategorii, kterou uživatel vybere. U každého modulu najdete
        instrukce, jaké data v nich máte vyplnit.
    </string>
    <string name="help_report_detail_header">Detail hlášení</string>
    <string name="help_report_detail">Poslední sekce přidání podnětu. Jedná se o ukázku, jak bude vámi nahlášený podnět
        v aplikaci vypadat. Zde máte poslední možnost zkontrolovat správnost vámi zadaných údajů. Pokud s něčím nejste
        spokojeni, vždy se můžete vrátit pomocí tlačítka zpět a údaje dodatečně upravit. Po kliknutí na tlačítko odeslat
        se podnět předá ke zpracování správě obce.\n
    </string>
</resources>