<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scrollView_help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

    <LinearLayout android:id="@+id/generated_layout"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:layout_marginTop="@dimen/activity_vertical_margin"
                  android:layout_marginStart="@dimen/activity_horizontal_margin"
                  android:layout_marginEnd="@dimen/activity_horizontal_margin"
                  android:orientation="vertical">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:text="@string/help_report_list_header"
                  android:textColor="@color/colorPrimaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin_half"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:textColor="@color/colorSecondaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:text="@string/help_report_list"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="18sp"
                  android:text="@string/help_new_report_header"
                  android:textColor="@color/colorPrimaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin_half"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:text="@string/help_choosing_photos_header"
                  android:textColor="@color/colorPrimaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin_half"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:textColor="@color/colorSecondaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:text="@string/help_choosing_photos"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:text="@string/help_setting_location_header"
                  android:textColor="@color/colorPrimaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin_half"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:textColor="@color/colorSecondaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:text="@string/help_setting_location"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:text="@string/help_choosing_category_header"
                  android:textColor="@color/colorPrimaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin_half"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:textColor="@color/colorSecondaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:text="@string/help_choosing_category"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:text="@string/help_report_description_header"
                  android:textColor="@color/colorPrimaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin_half"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:textColor="@color/colorSecondaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:text="@string/help_report_description"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:textColor="@color/colorSecondaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:text="@string/help_report_description_modules"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:text="@string/help_report_detail_header"
                  android:textColor="@color/colorPrimaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin_half"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="14sp"
                  android:textColor="@color/colorSecondaryText"
                  android:layout_marginBottom="@dimen/activity_vertical_margin"
                  android:text="@string/help_report_detail"/>

    </LinearLayout>
</ScrollView>
