<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText_email_sign_in_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/email"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="20dp"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText_password_sign_in_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/editText_email_sign_in_input"
                android:singleLine="true"
                android:hint="@string/password"
                android:textSize="16sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        <TextView
                android:text="@string/forgotten_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_forgotten_password" android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/editText_password_sign_in_input"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:textColor="@color/colorPrimary"/>

        <Button
                android:text="@string/action_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_login_login"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_forgotten_password"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorText"
                android:background="@drawable/btn_wide_primary"/>

        <TextView
                android:text="@string/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_or"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/button_login_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <Button
                android:text="@string/login_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_facebook"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/button_google"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_wide_facebook"
                android:textColor="@color/colorText"/>

        <Button
                android:text="@string/login_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/button_google"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_or"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_wide_google"
                android:textColor="@color/colorText"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/button_facebook"
                android:id="@+id/linearLayout">

            <TextView
                    android:text="@string/not_having_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteY="466dp"
                    tools:layout_editor_absoluteX="88dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:id="@+id/no_account_text"
                    android:layout_marginEnd="5dp"/>

            <TextView
                    android:text="@string/create_new_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteY="447dp"
                    tools:layout_editor_absoluteX="210dp"
                    android:layout_weight="1"
                    android:id="@+id/create_new_account_text"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>