<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ProgressBar android:id="@+id/registration_progress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"/>

        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:inputType="textPersonName"
                  android:ems="10"
                  android:id="@+id/editText_name_sign_up_input"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:hint="@string/name"
                  android:layout_marginStart="20dp"
                  android:layout_marginEnd="20dp"
                  app:layout_constraintHorizontal_bias="1.0"
                  android:layout_marginTop="20dp"
                  android:textSize="16sp"
                  app:layout_constraintTop_toTopOf="parent"/>

        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:inputType="textEmailAddress"
                  android:ems="10"
                  android:id="@+id/editText_email_sign_up_input"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:hint="@string/email"
                  android:layout_marginStart="20dp"
                  android:layout_marginEnd="20dp"
                  app:layout_constraintHorizontal_bias="1.0"
                  android:layout_marginTop="20dp"
                  android:textSize="16sp"
                  app:layout_constraintTop_toBottomOf="@+id/editText_name_sign_up_input"/>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
                      android:id="@+id/telephone_linearLayout_register" android:layout_marginTop="20dp"
                      app:layout_constraintTop_toBottomOf="@+id/editText_email_sign_up_input">

            <TextView android:text="+420"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/prefix_420_sign_up"
                      android:layout_weight="0"
                      android:layout_marginEnd="10dp"
                      android:textSize="16sp"/>

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="numberDecimal"
                      android:id="@+id/editText_telephone_sign_up_input"
                      android:singleLine="true"
                      android:hint="@string/telephone"
                      android:textSize="16sp"/>
        </LinearLayout>

        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:ems="10"
                  android:id="@+id/editText_password_sign_up_input"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.0"
                  android:singleLine="true"
                  android:hint="@string/password"
                  android:layout_marginStart="20dp"
                  android:layout_marginEnd="20dp"
                  android:layout_marginTop="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/telephone_linearLayout_register"
                  android:textSize="16sp"/>

        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:ems="10"
                  android:id="@+id/editText_password_confirm_sign_up_input"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.0"
                  android:fontFamily="@font/roboto"
                  android:singleLine="true"
                  android:hint="@string/password_confirm"
                  android:layout_marginStart="20dp"
                  android:layout_marginEnd="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/editText_password_sign_up_input"
                  android:layout_marginTop="20dp"
                  android:textSize="16sp"/>

        <CheckBox android:text="@string/sign_up_checkbox_text"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/checkBox_sign_in"
                  android:layout_marginTop="20dp"
                  app:layout_constraintTop_toBottomOf="@+id/editText_password_confirm_sign_up_input"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="20dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="20dp"
                  android:textColor="@color/colorSecondaryText"/>

        <Button android:text="@string/action_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button_register_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:textColor="@color/colorText"
                android:background="@drawable/btn_wide_primary"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_sign_in"/>

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/button_register_sign_in"
                      android:padding="20dp">

            <TextView android:text="@string/having_account"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      tools:layout_editor_absoluteY="466dp"
                      tools:layout_editor_absoluteX="88dp"
                      android:layout_weight="1"
                      android:gravity="right"
                      android:id="@+id/textView_no_account"
                      android:layout_marginEnd="5dp"
                      android:textColor="@color/colorSecondaryText"/>

            <TextView android:text="@string/having_account_login"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      tools:layout_editor_absoluteY="447dp"
                      tools:layout_editor_absoluteX="210dp"
                      android:layout_weight="1"
                      android:id="@+id/textView_login_user"
                      android:layout_marginStart="5dp"
                      android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>